# multiplayer-hub

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/lib/SFML/lib/cmake/SFML/: SFMLSharedTargets-release.cmake  SFMLSharedTargets.cmake
client/src/: main.cpp
client/src/game/core/: Game.cpp  Game.hpp
client/src/game/entities/: Player.cpp  Player.hpp
client/src/game/manager/: PlayerManager.cpp  PlayerManager.hpp
client/src/game/networking/: NetworkInterface.cpp  NetworkInterface.hpp
client/src/networking/: NetworkClient.cpp  NetworkClient.hpp
client/src/utils/: config.cpp  config.hpp
docs/: server-old-main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
server/src/core/: serve.cpp  serve.hpp
server/src/networking/: NetworkInterface.cpp  NetworkInterface.hpp
server/src/utils/: global.hpp
src/: main.cpp
src/core/: Game.hpp
src/entities/: Player.hpp
src/utils/: config.cpp
